# opal-a

./: .gitignore  CLAUDE.md  Cargo.toml  Opal.md  README.md
.github/workflows/: ci.yml
crates/opal-cli/: Cargo.toml
crates/opal-cli/src/: main.rs
crates/opal-interp/: Cargo.toml
crates/opal-lexer/: Cargo.toml
crates/opal-lsp/: Cargo.toml
crates/opal-parser/: Cargo.toml
crates/opal-runtime/: Cargo.toml
crates/opal-stdlib/: Cargo.toml
docs/01-basics/: collections.md  comments.md  destructuring.md  literals.md  operators.md  variables-and-assignment.md
docs/02-control-flow/: conditionals.md  loops-and-iteration.md  pattern-matching.md
docs/03-functions-and-types/: classes-and-inheritance.md  enums.md  ffi.md  functions-and-closures.md  iterators.md  models-and-settings.md  modules-and-imports.md  multiple-dispatch.md  protocols.md  type-system.md  visibility.md
docs/04-error-handling/: error-handling.md  null-objects.md  preconditions.md
docs/05-concurrency/: concurrency.md
docs/06-patterns/: dependency-injection.md  platform-integration.md  specifications.md
docs/07-metaprogramming/: metaprogramming.md
docs/08-stdlib/: stdlib.md
docs/09-tooling/: tooling.md
docs/10-examples/: pretotyping.md
docs/appendix/: appendix.md  self-hosting.md
docs/features/: classes-and-inheritance.md  testing.md  (+9 more)
editors/: README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_lexer.rs
scripts/: setup-cursor-extension.sh  setup-zed-extension.sh
tests/: run_spec.sh
tree-sitter-opal/: .gitignore  grammar.js  package.json  pnpm-lock.yaml  tree-sitter.json
(+323 files in other folders)
