[package]
name = "opal-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "opal"
path = "src/main.rs"

[dependencies]
opal-lexer.workspace = true
opal-parser.workspace = true
opal-interp.workspace = true
opal-runtime.workspace = true
clap.workspace = true
miette.workspace = true
